--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,14 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.2</version>
-<!--				<configuration>-->
-<!--					<excludes>-->
-<!--						<exclude>com/hcl/hackathon/api/entity/**.class</exclude>-->
-<!--					</excludes>-->
-<!--				</configuration>-->
+				<configuration>
+					<excludes>
+						<exclude>org/hcl/hackathon/transactions/dto/**.class</exclude>
+						<exclude>org/hcl/hackathon/transactions/entity/**.class</exclude>
+						<exclude>org/hcl/hackathon/transactions/exceptions/**.class</exclude>
+						<exclude>org/hcl/hackathon/transactions/handlers/**.class</exclude>
+=					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
